// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IplOverlay matches snapshot when hidden 1`] = `
<transition-stub>
  <!--v-if-->
</transition-stub>
`;

exports[`IplOverlay matches snapshot when visible 1`] = `
<transition-stub>
  <div class="ipl-overlay__wrapper layout horizontal center-horizontal center-vertical">
    <div class="ipl-overlay__content"></div>
  </div>
</transition-stub>
`;
